--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,265 @@
-new
+<!DOCTYPE html>
+<html lang="uz">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Bilimdon</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
+            color: #333;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+        }
+
+        .header {
+            background: linear-gradient(135deg, #673AB7 0%, #9C27B0 100%);
+            color: white;
+            padding: 40px 30px;
+            text-align: center;
+        }
+
+        .header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+            font-weight: 700;
+        }
+
+        .header p {
+            opacity: 0.9;
+            font-size: 1.1rem;
+        }
+
+        .content {
+            padding: 40px 30px;
+        }
+
+        h2 {
+            color: #673AB7;
+            font-size: 1.4rem;
+            margin: 30px 0 15px 0;
+            padding-bottom: 10px;
+            border-bottom: 2px solid #f0e6ff;
+        }
+
+        h2:first-of-type {
+            margin-top: 0;
+        }
+
+        p {
+            margin-bottom: 15px;
+            text-align: justify;
+        }
+
+        ul {
+            margin: 15px 0;
+            padding-left: 25px;
+        }
+
+        li {
+            margin-bottom: 10px;
+            position: relative;
+        }
+
+        li::marker {
+            color: #673AB7;
+        }
+
+        .highlight-box {
+            background: linear-gradient(135deg, #f5f0ff 0%, #ede7f6 100%);
+            border-left: 4px solid #673AB7;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 0 10px 10px 0;
+        }
+
+        .highlight-box p {
+            margin: 0;
+        }
+
+        .contact-box {
+            background: #673AB7;
+            color: white;
+            padding: 25px;
+            border-radius: 15px;
+            margin-top: 30px;
+            text-align: center;
+        }
+
+        .contact-box h3 {
+            margin-bottom: 15px;
+            font-size: 1.3rem;
+        }
+
+        .contact-box a {
+            color: #fff;
+            text-decoration: none;
+            background: rgba(255,255,255,0.2);
+            padding: 8px 20px;
+            border-radius: 25px;
+            display: inline-block;
+            margin-top: 10px;
+            transition: background 0.3s;
+        }
+
+        .contact-box a:hover {
+            background: rgba(255,255,255,0.3);
+        }
+
+        .footer {
+            text-align: center;
+            padding: 25px;
+            background: #f8f9fa;
+            color: #666;
+            font-size: 0.9rem;
+        }
+
+        .badge {
+            display: inline-block;
+            background: #673AB7;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            margin-bottom: 20px;
+        }
+
+        .emoji {
+            font-size: 1.2em;
+            margin-right: 5px;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+
+            .header {
+                padding: 30px 20px;
+            }
+
+            .header h1 {
+                font-size: 1.8rem;
+            }
+
+            .content {
+                padding: 25px 20px;
+            }
+
+            h2 {
+                font-size: 1.2rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>🛡️ Privacy Policy</h1>
+            <p>Bilimdon - Test Yaratish Ilovasi</p>
+        </div>
+
+        <div class="content">
+            <span class="badge">Oxirgi yangilanish: 2025-yil, Dekabr</span>
+
+            <h2><span class="emoji">📌</span> Kirish</h2>
+            <p>
+                Bilimdon ilovasiga xush kelibsiz! Biz foydalanuvchilarimizning maxfiyligini hurmat qilamiz va shaxsiy ma'lumotlaringizni himoya qilishga intilamiz. Ushbu Maxfiylik siyosati bizning ilovamizdan foydalanganingizda qanday ma'lumotlar to'planishi, ishlatilishi va himoya qilinishini tushuntiradi.
+            </p>
+
+            <h2><span class="emoji">📊</span> To'planadigan Ma'lumotlar</h2>
+            <p>Biz quyidagi ma'lumotlarni to'plashimiz mumkin:</p>
+            <ul>
+                <li><strong>Hisob ma'lumotlari:</strong> Ism, elektron pochta manzili, telefon raqami (ro'yxatdan o'tishda)</li>
+                <li><strong>Foydalanish ma'lumotlari:</strong> Yaratilgan testlar, savollar va variantlar</li>
+                <li><strong>Kirish kaliti:</strong> Administrator tomonidan berilgan maxsus kirish kodi</li>
+            </ul>
+
+            <h2><span class="emoji">🎯</span> Ma'lumotlardan Foydalanish</h2>
+            <p>To'plangan ma'lumotlar quyidagi maqsadlarda ishlatiladi:</p>
+            <ul>
+                <li>Ilovaga kirish va autentifikatsiya qilish</li>
+                <li>Test va savollarni saqlash hamda boshqarish</li>
+                <li>Ilova funksionalligini yaxshilash</li>
+                <li>Texnik muammolarni aniqlash va hal qilish</li>
+                <li>Foydalanuvchi tajribasini yaxshilash</li>
+            </ul>
+
+            <div class="highlight-box">
+                <p><strong>⚠️ Muhim:</strong> Biz sizning ma'lumotlaringizni hech qachon uchinchi shaxslarga sotmaymiz yoki reklama maqsadlarida ishlatmaymiz.</p>
+            </div>
+
+            <h2><span class="emoji">🔥</span> Firebase Xizmatlari</h2>
+            <p>
+                Ilovamiz Google Firebase platformasidan foydalanadi. Firebase orqali quyidagi xizmatlar ta'minlanadi:
+            </p>
+            <ul>
+                <li><strong>Firebase Authentication:</strong> Xavfsiz tizimga kirish</li>
+                <li><strong>Cloud Firestore:</strong> Ma'lumotlarni saqlash</li>
+                <li><strong>Firebase Analytics:</strong> Ilova statistikasi (anonim)</li>
+            </ul>
+            <p>
+                Firebase o'zining maxfiylik siyosatiga ega. Batafsil ma'lumot uchun: 
+                <a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Privacy Policy</a>
+            </p>
+
+            <h2><span class="emoji">🔒</span> Ma'lumotlar Xavfsizligi</h2>
+            <p>Biz sizning ma'lumotlaringizni himoya qilish uchun quyidagi choralarni ko'ramiz:</p>
+            <ul>
+                <li>SSL/TLS shifrlash orqali ma'lumotlarni uzatish</li>
+                <li>Xavfsiz serverlar va ma'lumotlar bazasi</li>
+                <li>Kirish kalitlari orqali autentifikatsiya</li>
+                <li>Muntazam xavfsizlik yangilanishlari</li>
+            </ul>
+
+            <h2><span class="emoji">👶</span> Bolalar Maxfiyligi</h2>
+            <p>
+                Ilovamiz 13 yoshdan kichik bolalardan bila turib shaxsiy ma'lumotlar to'plamaydi. Agar siz ota-ona yoki vasiy bo'lsangiz va farzandingiz bizga shaxsiy ma'lumotlar berganini bilsangiz, iltimos, biz bilan bog'laning.
+            </p>
+
+            <h2><span class="emoji">🍪</span> Cookie va Kuzatuv</h2>
+            <p>
+                Ilovamiz minimal darajada cookie fayllaridan foydalanadi. Asosan sessiya boshqaruvi va foydalanuvchi sozlamalarini saqlash uchun ishlatiladi. Biz uchinchi tomon reklama cookie'laridan foydalanmaymiz.
+            </p>
+
+            <h2><span class="emoji">📝</span> Siyosatdagi O'zgarishlar</h2>
+            <p>
+                Biz ushbu Maxfiylik siyosatini vaqti-vaqti bilan yangilashimiz mumkin. Har qanday muhim o'zgarishlar haqida sizni ilova orqali xabardor qilamiz. Yangilanish sanasini sahifaning yuqori qismida ko'rishingiz mumkin.
+            </p>
+
+            <h2><span class="emoji">✅</span> Rozilik</h2>
+            <p>
+                Ilovamizdan foydalanish orqali siz ushbu Maxfiylik siyosati shartlariga rozilik bildirasiz.
+            </p>
+
+            <div class="contact-box">
+                <h3>📧 Bog'lanish</h3>
+                <p>Savollaringiz yoki takliflaringiz bo'lsa, biz bilan bog'laning:</p>
+                <a href="mailto:shaxruzsamiyev0@gmail.com">shaxruzsamiyev0@gmail.com</a>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p>© 2025 EduTest Pro. Barcha huquqlar himoyalangan.</p>
+            <p>Azimova School | Toshkent, O'zbekistan</p>
+        </div>
+    </div>
+</body>
+</html>
