--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                         <li><a href="courses.html">Kurslar</a></li>
                         <li><a href="about.html">Biz haqimizda</a></li>
                         <li><a href="contact.html">Aloqa</a></li>
+                        <li><a href="privacy-policy.html">Maxfiylik siyosati</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -430,8 +431,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2024 Azimova School. Barcha huquqlar himoyalangan.</p>
-                <p>Toshkent, O'zbekiston 🇺🇿</p>
+                <p>© 2025 Azimova School. Barcha huquqlar himoyalangan.</p>
+                <p><a href="privacy-policy.html">Maxfiylik siyosati</a> | Toshkent, O'zbekiston 🇺🇿</p>
             </div>
         </div>
     </footer>
