--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <li><a href="contact.html" class="active">Aloqa</a></li>
             </ul>
             <div class="nav-actions">
-                <a href="tel:+998901234567" class="nav-phone">📞 +998 90 123 45 67</a>
+                <a href="tel:+998935135197" class="nav-phone">📞 +998 93 513 51 97</a>
                 <a href="contact.html" class="btn btn-primary btn-sm">Ro'yxatdan o'tish</a>
             </div>
             <div class="mobile-menu-btn" id="mobileMenuBtn"><span></span><span></span><span></span></div>
@@ -69,14 +69,14 @@
                 <div class="contact-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="contact-card-icon">📞</div>
                     <h3>Telefon</h3>
-                    <p>+998 90 123 45 67<br>+998 91 234 56 78</p>
-                    <a href="tel:+998901234567" class="contact-card-link">Qo'ng'iroq qilish →</a>
+                    <p>+998 93 513 51 97<br>+998 93 513 51 97</p>
+                    <a href="tel:+998935135197" class="contact-card-link">Qo'ng'iroq qilish →</a>
                 </div>
                 <div class="contact-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="contact-card-icon">📧</div>
                     <h3>Email</h3>
-                    <p>info@azimovaschool.uz<br>admin@azimovaschool.uz</p>
-                    <a href="mailto:info@azimovaschool.uz" class="contact-card-link">Email yuborish →</a>
+                    <p>info@azimova_school.uz<br>admin@azimova_school.uz</p>
+                    <a href="mailto:info@azimova_school.uz" class="contact-card-link">Email yuborish →</a>
                 </div>
                 <div class="contact-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="contact-card-icon">🕐</div>
@@ -120,7 +120,7 @@
                         <div class="contact-direct">
                             <h4>Tezkor aloqa:</h4>
                             <div class="direct-buttons">
-                                <a href="tel:+998901234567" class="direct-btn phone">
+                                <a href="tel:+998935135197" class="direct-btn phone">
                                     <span>📞</span>
                                     <span>Qo'ng'iroq</span>
                                 </a>
@@ -145,14 +145,14 @@
                                 <span class="social-icon">📱</span>
                                 <div>
                                     <strong>Telegram</strong>
-                                    <small>@azimovaschool</small>
+                                    <small>@azimova_school</small>
                                 </div>
                             </a>
                             <a href="#" class="social-link-item instagram">
                                 <span class="social-icon">📷</span>
                                 <div>
                                     <strong>Instagram</strong>
-                                    <small>@azimovaschool</small>
+                                    <small>@azimova_school</small>
                                 </div>
                             </a>
                             <a href="#" class="social-link-item facebook">
@@ -194,7 +194,7 @@
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="phone">Telefon raqam *</label>
-                                    <input type="tel" id="phone" name="phone" placeholder="+998 90 123 45 67" required>
+                                    <input type="tel" id="phone" name="phone" placeholder="+998 93 513 51 97" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email (ixtiyoriy)</label>
@@ -396,7 +396,7 @@
                 <h2>Hali savollaringiz <span class="gradient-text">bormi?</span></h2>
                 <p>Bizga qo'ng'iroq qiling - barcha savollaringizga javob beramiz!</p>
                 <div class="cta-buttons">
-                    <a href="tel:+998901234567" class="btn btn-primary btn-lg">📞 +998 90 123 45 67</a>
+                    <a href="tel:+998935135197" class="btn btn-primary btn-lg">📞 +998 93 513 51 97</a>
                     <a href="https://t.me/azimovaschool" class="btn btn-secondary btn-lg">📱 Telegram</a>
                 </div>
             </div>
@@ -435,8 +435,8 @@
                     <h4>Aloqa</h4>
                     <ul>
                         <li>📍 Toshkent sh., Chilonzor tumani</li>
-                        <li>📞 <a href="tel:+998901234567">+998 90 123 45 67</a></li>
-                        <li>📧 <a href="mailto:info@azimovaschool.uz">info@azimovaschool.uz</a></li>
+                        <li>📞 <a href="tel:+998935135197">+998 93 513 51 97</a></li>
+                        <li>📧 <a href="mailto:info@azimova_school.uz">info@azimova_school.uz</a></li>
                         <li>🕐 Dush-Shan: 9:00 - 21:00</li>
                     </ul>
                 </div>
@@ -452,7 +452,7 @@
     <button class="scroll-top" id="scrollTop">↑</button>
     <div class="float-contact">
         <a href="https://t.me/azimovaschool" class="float-btn telegram">📱</a>
-        <a href="tel:+998901234567" class="float-btn phone">📞</a>
+        <a href="tel:+998935135197" class="float-btn phone">📞</a>
     </div>
 
     <!-- Success Modal -->
