--- a/delete-account.html
+++ b/delete-account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akkauntni O'chirish - Bilimdon</title>
+    <title>Akkauntni O'chirish - EduTest Pro</title>
     <style>
         * {
             margin: 0;
