--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="contact.html">Aloqa</a></li>
             </ul>
             <div class="nav-actions">
-                <a href="tel:+998901234567" class="nav-phone">📞 +998 90 123 45 67</a>
+                <a href="tel:+998935135197" class="nav-phone">📞 +998 93 513 51 97</a>
                 <a href="contact.html" class="btn btn-primary btn-sm">Ro'yxatdan o'tish</a>
             </div>
             <div class="mobile-menu-btn" id="mobileMenuBtn"><span></span><span></span><span></span></div>
@@ -45,7 +45,7 @@
             <li><a href="about.html">Biz haqimizda</a></li>
             <li><a href="contact.html">Aloqa</a></li>
         </ul>
-        <a href="tel:+998901234567" class="btn btn-primary">📞 Qo'ng'iroq qilish</a>
+        <a href="tel:+998935135197" class="btn btn-primary">📞 Qo'ng'iroq qilish</a>
     </div>
 
     <!-- Hero Section -->
@@ -378,7 +378,7 @@
                 <p>Bepul sinov darsiga yoziling va professional ustozlar bilan til o'rganishni boshlang.</p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary btn-lg">Bepul sinov darsi →</a>
-                    <a href="tel:+998901234567" class="btn btn-secondary btn-lg">📞 +998 90 123 45 67</a>
+                    <a href="tel:+998935135197" class="btn btn-secondary btn-lg">📞 +998 93 513 51 97</a>
                 </div>
                 <div class="cta-features">
                     <span>✓ Bepul konsultatsiya</span>
@@ -424,8 +424,8 @@
                     <h4>Aloqa</h4>
                     <ul>
                         <li>📍 Toshkent sh., Chilonzor tumani</li>
-                        <li>📞 <a href="tel:+998901234567">+998 90 123 45 67</a></li>
-                        <li>📧 <a href="mailto:info@azimovaschool.uz">info@azimovaschool.uz</a></li>
+                        <li>📞 <a href="tel:+998935135197">+998 93 513 51 97</a></li>
+                        <li>📧 <a href="mailto:shaxruzsamiyev0@gmail.com">shaxruzsamiyev0@gmail.com</a></li>
                         <li>🕐 Dush-Shan: 9:00 - 21:00</li>
                     </ul>
                 </div>
@@ -441,7 +441,7 @@
     <button class="scroll-top" id="scrollTop">↑</button>
     <div class="float-contact">
         <a href="https://t.me/azimovaschool" class="float-btn telegram">📱</a>
-        <a href="tel:+998901234567" class="float-btn phone">📞</a>
+        <a href="tel:+998935135197" class="float-btn phone">📞</a>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
